# cookiecutter-poetry-pypackage

./: README.md  README.rst  cookiecutter.json  pyproject.toml  setup.cfg  tox.ini
docs/source/: conf.py  environment_setup.rst  index.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: __init__.py  test_bake_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  LICENSE  README.rst  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/docs/: requirements-docs.txt
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst  installation.rst  modules.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.py
