[tool.poetry]
name = "cookiecutter_poetry_pypackage"
version = "0.1.0"
description = "Cookiecutter template for a Python package."
readme = "README.rst"
authors = ["Fabien Meyer <fabien-meyer@outlook.com>"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
typing_extensions = "^3.7.4"

pytest-cookies = {version = "^0.4.0", optional = true}
coverage = {version = "^5.0.3", optional = true}

[tool.poetry.dev-dependencies]
bump2version = "^0.5.11"
cookiecutter = "^1.4.0"
tox = "^3.14.3"

[tool.poetry.extras]
test = ["pytest-cookies", "coverage"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
