[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.rst"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
license = "MIT"
include = ["{{ cookiecutter.project_slug }}/py.typed"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
typing_extensions = "^3.7.4"

pytest = [
    {version = "^5.3.4", optional = true, python = "^3.5"},
    {version = "^4.6.9", optional = true, python = "~2.7"}
]
coverage = {version = "^5.0.3", optional = true}

[tool.poetry.dev-dependencies]
bump2version = "^0.5.11"
tox = "^3.14.3"

[tool.poetry.extras]
test = ["pytest", "coverage"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
